<resources>
    <string name="app_name">Lesss</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="your_password">Your Password</string>
    <string name="password">Password</string>
    <string name="text_welcome">WELCOME</string>
    <string name="text_user">Username</string>
    <string name="text_introduction">Introduction</string>
    <string name="text_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque suscipit
        blandit turpis ut sagittis. Pellentesque luctus sagittis orci dapibus imperdiet.
        Nunc facilisis ullamcorper diam at sollicitudin.</string>
    <string name="text_error">ERROR</string>
    <string name="text_error_message">Invalid username or password</string>
    <string name="text_action_search">Search</string>
    <string name="text_action_settings">Settings</string>
    <string name="text_action_logout">LogOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ir_al_super">Go to Super</string>
    <string name="car">take car to maintenance</string>
    <string name="laundry">go to laundry</string>
    <string name="prueba_git">git proof</string>
</resources>